--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=Andrey-B-lab_counter-service-exercise
-sonar.organization=andrinatravel
+sonar.projectKey=
+sonar.organization=
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=counter-service-exercise
+#sonar.projectName=counter-service
 #sonar.projectVersion=1.0
 
 
